Feat: Add responsive image gallery

--- a/0x02-tailwind-css/src/6-imageGallery.html
+++ b/0x02-tailwind-css/src/6-imageGallery.html
@@ -30,9 +30,9 @@
         <aside class=" p-4">Sidebar</aside>
 
         <section class="bg-green-200 grid grid-cols-1 lg:grid-cols-3 w-screen gap-2" >
-            <div class="p-4 bg-red-200"><img src="../assests/images/saka.jpg" alt=""></div>
-            <div class="p-4 bg-red-400"><img src="../assests/images/gabriel.jpg" alt=""></div>
-            <div class="p-4 bg-red-500"><img src="../assests/images/timber.jpg" alt=""></div>
+            <div class="p-4 bg-red-200"><img class="w-{200px}" src="../assests/images/saka.jpg" alt=""></div>
+            <div class="p-4 bg-red-400"><img class="w-{200px}"  src="../assests/images/gabriel.jpg" alt=""></div>
+            <div class="p-4 bg-red-500"><img class="w-{200px}" src="../assests/images/timber.jpg" alt=""></div>
             
         </section>
 
